--- a/.classpath
+++ b/.classpath
@@ -34,5 +34,9 @@
 	<classpathentry kind="lib" path="C:/Users/basyir/Desktop/Apache POI Jars/commons-io-2.11.0/commons-io-2.11.0-tests.jar"/>
 	<classpathentry kind="lib" path="C:/Users/basyir/Desktop/Apache POI Jars/commons-io-2.11.0/commons-io-2.11.0-test-sources.jar"/>
 	<classpathentry kind="lib" path="C:/Users/basyir/Desktop/Apache POI Jars/commons-collections4-4.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/basyir/Desktop/charts4j-1.3/lib/charts4j-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/basyir/Desktop/charts4j-1.3/lib/junit-4.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/basyir/Desktop/jfreechart-1.0.19/lib/jcommon-1.0.23.jar"/>
+	<classpathentry kind="lib" path="C:/Users/basyir/Desktop/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
