--- a/.classpath
+++ b/.classpath
@@ -6,11 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.5">
-		<attributes>
-			<attribute name="owner.project.facets" value="jst.web"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="C:/Users/basyir/Desktop/downloaded libraries/mysql-connector-java-5.1.0/mysql-connector-java-5.1.0-bin.jar"/>
@@ -38,5 +33,8 @@
 	<classpathentry kind="lib" path="C:/Users/basyir/Desktop/charts4j-1.3/lib/junit-4.4.jar"/>
 	<classpathentry kind="lib" path="C:/Users/basyir/Desktop/jfreechart-1.0.19/lib/jcommon-1.0.23.jar"/>
 	<classpathentry kind="lib" path="C:/Users/basyir/Desktop/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar"/>
+	<classpathentry kind="lib" path="C:/Users/basyir/Desktop/downloaded libraries/activation-jaf1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/basyir/Desktop/downloaded libraries/java-mail-1.4.4.jar"/>
+	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.36/lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
