--- a/.classpath
+++ b/.classpath
@@ -32,5 +32,10 @@
 	<classpathentry kind="lib" path="C:/Users/basyir/Desktop/downloaded libraries/activation-jaf1.1.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/basyir/Desktop/downloaded libraries/java-mail-1.4.4.jar"/>
 	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.36/lib/servlet-api.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/apache-tomcat-8.0.36">
+		<attributes>
+			<attribute name="owner.project.facets" value="jst.web"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
